--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "npm run build && surge"
   },
   "devDependencies": {
+    "sass": "^1.51.0",
     "vite": "^2.9.7"
   },
   "dependencies": {
